--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pop Up box</title>
+    <title>SafeSoft PC Cleaner</title>
+    <link rel="shortcut icon" href="img/SafeSoft1.png" type="jpg/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/fontawesome-free/css/all.css">
@@ -64,7 +65,7 @@
                     <h3 class="step">Step 4</h3>
                     <p class="r_p">Click the Clean button and experience better PC performance</p>
                     <h1 class="how"><a href="#">Download Here</a></h1>
-                    <span class="step"><a href="#">License Agreement </a></span> | <span class="step"><a href="#">Uninstall </a></span> | <span class="step"><a href="#">Refund Policy </a></span> | <span class="step"><a href="#">100% safe and risk-free</a></span>
+                    <span class="step"><a href="#">License Agreement </a></span> | <span class="step"><a href="#">Uninstall </a></span> | <span class="step"><a href="#">Refund Policy </a></span>
                  </div>
                  <div class="r_wrapper">
                     <h1 class="key">Key Features</h1>
@@ -78,7 +79,7 @@
                     <h3 class="step pb-2"><span><i class="fa fa-check"></i></span class="font-weight-bold"> Permanently delete confidential files  <span>PRO</span></h3>
                     <h3 class="step pb-2"><span><i class="fa fa-check"></i></span class="font-weight-bold"> Protect personal information (ID, credit cards, and more) <span>PRO</span></h3>
                     <h1 class="how"><a href="#">Download Here</a></h1>
-                    <span class="step"><a href="#">License Agreement </a></span> | <span class="step"><a href="#">Uninstall </a></span> | <span class="step"><a href="#">Refund Policy </a></span> | <span class="step"><a href="#">100% safe and risk-free</a></span>
+                    <span class="step"><a href="#">License Agreement </a></span> | <span class="step"><a href="#">Uninstall </a></span> | <span class="step"><a href="#">Refund Policy </a></span>
                 </div>
             </div>
             <div id="modalPopUP" class="modalPopUP">
