--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h3 class="step">Step 4</h3>
                     <p class="r_p">Click the Clean button and experience better PC performance</p>
                     <h1 class="how"><a href="#">Download Here</a></h1>
-                    <span class="step"><a href="#">License Agreement </a></span> | <span class="step"><a href="#">Uninstall </a></span> | <span class="step"><a href="#">Refund Policy </a></span>
+                    <span class="step"><a href="https://safesoftpro.com/license-agreement/">License Agreement </a></span> | <span class="step"><a href="https://safesoftpro.com/uninstall/">Uninstall </a></span> | <span class="step"><a href="https://safesoftpro.com/refund-policy/">Refund Policy </a></span> <span class="step safe_r">100% Safe and Risk-Free</span>
                  </div>
                  <div class="r_wrapper">
                     <h1 class="key">Key Features</h1>
@@ -79,7 +79,7 @@
                     <h3 class="step pb-2"><span><i class="fa fa-check"></i></span class="font-weight-bold"> Permanently delete confidential files  <span>PRO</span></h3>
                     <h3 class="step pb-2"><span><i class="fa fa-check"></i></span class="font-weight-bold"> Protect personal information (ID, credit cards, and more) <span>PRO</span></h3>
                     <h1 class="how"><a href="#">Download Here</a></h1>
-                    <span class="step"><a href="#">License Agreement </a></span> | <span class="step"><a href="#">Uninstall </a></span> | <span class="step"><a href="#">Refund Policy </a></span>
+                    <span class="step"><a href="https://safesoftpro.com/license-agreement/">License Agreement </a></span> | <span class="step"><a href="https://safesoftpro.com/uninstall/">Uninstall </a></span> | <span class="step"><a href="https://safesoftpro.com/refund-policy/">Refund Policy </a></span> <span class="step safe_r">100% Safe and Risk-Free</span>
                 </div>
             </div>
             <div id="modalPopUP" class="modalPopUP">
@@ -101,7 +101,7 @@
     <div id="bodyblack"></div>
     <footer>
         <div class="container">
-            <span class="pl-3">© Blacktail Technology</span> <span class="pl-3"><a href="#"> License Agreement </a></span> | <span><a href="#"> Refund Policy  </a></span> | <span><a href="#"> Uninstall </a></span>
+            <span class="pl-3">© Blacktail Technology</span> <span class="pl-3"><a href="https://safesoftpro.com/license-agreement/"> License Agreement </a></span> | <span><a href="https://safesoftpro.com/refund-policy/"> Refund Policy  </a></span> | <span><a href="https://safesoftpro.com/uninstall/"> Uninstall </a></span>
             <hr>
             <p>Microsoft Windows and its logos are trademarks of Microsoft Corp. We are not affiliated with Microsoft nor claim direct affiliation.</p>
         </div>
