Remove some script

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     </footer>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="js/intent.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
