--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
                     <span>
                         <button id="popUP" class="btnprimary">Download</button>
                     </span>
+                    <div class="a_bad">By clicking the button above and downloading SafeSoft PC Cleaner, you accept the <a href="https://safesoftpro.com/license-agreement/">end user license</a> and <a href="https://safesoftpro.com/privacy-policy/">privacy policy</a> of this site.</div>
                 </div>
                 <div class="pt-2 pb-3">Download Time: Under 1 minute</div>
                 <div class="pt-3">Is your PC operating too slowly and is doing nothing but provide you with unsatisfactory performance? Don’t give up on it just yet as it may only need a little bit of cleaning.</div>
                 <div class="pt-3 pb-3">If you want a Clean and Safe PC, you must take ample, yet precise steps.</div>
                 <div class="pt-4">
                     <div id="symptoms"><span><i class="fa fa-plus" aria-hidden="true"></i></span> <span class="ml-3">Symptoms</span> </div> 
-                    <div id="symptomsInfo">Windows errors and other malfunctions may happen when your operating system is burdened by invalid system references, as well as registry files that are corrupted and mistakenly deleted. Don’t let this happen just because you don’t know how to maintain your PC. Your machine becomes susceptible to crashes and errors over time most especially if you don’t take ample care of it.</div>
+                    <div id="symptomsInfo">Windows issues such as slow speed and other malfunctions may happen when your operating system is burdened by potentially harmful files and junk. If you want to avoid this conundrum, PC maintenance is a must.</div>
                     <div id="fix"><span><i class="fa fa-plus" aria-hidden="true"></i></span> <span class="ml-3">Fix</span> </div>
                     <div id="fixInfo">We highly recommend for you to download and install SafeSoft PC Cleaner. SafeSoft PC Cleaner is an All-in-1 tool that’s created to help people who are not adept with PC maintenance. Its powerful features can scan, detect, clean, repair, and protect one’s computer and are designed to be performed with just 1 click.</div>
                 </div>
@@ -65,6 +66,7 @@
                     <h3 class="step">Step 4</h3>
                     <p class="r_p">Click the Clean button and experience better PC performance</p>
                     <h1 class="how"><a href="#">Download Here</a></h1>
+                    <p class="r_p">By clicking the button above and downloading SafeSoft PC Cleaner, you accept the <a href="https://safesoftpro.com/license-agreement/">end user license</a> and <a href="https://safesoftpro.com/privacy-policy/">privacy policy</a> of this site.</p>
                     <span class="step"><a href="https://safesoftpro.com/license-agreement/">License Agreement </a></span> | <span class="step"><a href="https://safesoftpro.com/uninstall/">Uninstall </a></span> | <span class="step"><a href="https://safesoftpro.com/refund-policy/">Refund Policy </a></span> <span class="step safe_r">100% Safe and Risk-Free</span>
                  </div>
                  <div class="r_wrapper">
@@ -79,6 +81,7 @@
                     <h3 class="step pb-2"><span><i class="fa fa-check"></i></span class="font-weight-bold"> Permanently delete confidential files  <span>PRO</span></h3>
                     <h3 class="step pb-2"><span><i class="fa fa-check"></i></span class="font-weight-bold"> Protect personal information (ID, credit cards, and more) <span>PRO</span></h3>
                     <h1 class="how"><a href="#">Download Here</a></h1>
+                    <p class="r_p">By clicking the button above and downloading SafeSoft PC Cleaner, you accept the <a href="https://safesoftpro.com/license-agreement/">end user license</a> and <a href="https://safesoftpro.com/privacy-policy/">privacy policy</a> of this site.</p>
                     <span class="step"><a href="https://safesoftpro.com/license-agreement/">License Agreement </a></span> | <span class="step"><a href="https://safesoftpro.com/uninstall/">Uninstall </a></span> | <span class="step"><a href="https://safesoftpro.com/refund-policy/">Refund Policy </a></span> <span class="step safe_r">100% Safe and Risk-Free</span>
                 </div>
             </div>
@@ -95,6 +98,7 @@
                 </div>
                 <div class="imgInfo"><img class="black" src="img/PC.png" alt="" srcset=""></div>
                  <div class="btnDonwload"> <button class="btndanger">Download Free Version</button></div>
+                 <div class="a_bad">By clicking the button above and downloading SafeSoft PC Cleaner, you accept the <a href="https://safesoftpro.com/license-agreement/">end user license</a> and <a href="https://safesoftpro.com/privacy-policy/">privacy policy</a> of this site.</div>
             </div>
         </div>
         
